--- a/index.html
+++ b/index.html
@@ -102,6 +102,6 @@
         <div id="statusMessage" style="display: none; padding: 15px; text-align: center;"></div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=1"></script>
 </body>
 </html>
