--- a/index.html
+++ b/index.html
@@ -111,16 +111,37 @@
     <!-- STEP 3 -->
     <div id="step3" class="step">
       <h2>Чем занимаетесь?</h2>
-      <select id="sphere" required>
-        <option value="">Выберите сферу</option>
-        <option value="IT">IT и Разработка</option>
-        <option value="Финансы">Финансы</option>
-        <option value="Маркетинг">Маркетинг</option>
-        <option value="Образование">Образование</option>
-        <option value="Продажи">Продажи</option>
-        <option value="Юриспруденция">Юриспруденция</option>
-        <option value="Другое">Другое</option>
-      </select>
+        <select id="sphere" required>
+          <option value="">Выберите сферу</option>
+          <option value="IT">IT и Разработка</option>
+          <option value="Финансы">Финансы</option>
+          <option value="Маркетинг">Маркетинг</option>
+          <option value="Образование">Образование</option>
+          <option value="Продажи">Продажи</option>
+          <option value="Юриспруденция">Юриспруденция</option>
+          <option value="Медицина">Медицина и здравоохранение</option>
+          <option value="Дизайн">Дизайн и креативные индустрии</option>
+          <option value="Медиа">Медиа и журналистика</option>
+          <option value="Наука">Наука и исследования</option>
+          <option value="Инженерия">Инженерия и промышленность</option>
+          <option value="Строительство">Строительство и недвижимость</option>
+          <option value="Логистика">Логистика и транспорт</option>
+          <option value="HoReCa">HoReCa, туризм и гостиницы</option>
+          <option value="Ритейл">Ритейл и торговля</option>
+          <option value="HR">Управление персоналом / HR</option>
+          <option value="Администрация">Администрирование и управление</option>
+          <option value="Госслужба">Государственная служба и НКО</option>
+          <option value="Аналитика">Аналитика и консалтинг</option>
+          <option value="Безопасность">Безопасность и охрана</option>
+          <option value="Культура">Искусство и культура</option>
+          <option value="Спорт">Спорт и фитнес</option>
+          <option value="Инфраструктура">Энергетика и инфраструктура</option>
+          <option value="Сельское хозяйство">Сельское хозяйство и агро</option>
+          <option value="Экология">Экология и устойчивое развитие</option>
+          <option value="Блогинг">Блогинг и SMM</option>
+          <option value="Другое">Другое</option>
+        </select>
+
 
       <h3>Ваши интересы</h3>
       <div class="checkbox-group" id="interestsGroup">
