--- a/search.html
+++ b/search.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Поиск людей</title>
+  <meta charset="UTF-8" />
+  <title>Поиск партнёров</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
-    body { font-family: Arial; padding:20px; }
-    input, select { padding:7px; margin:8px 0; border-radius:7px; border:1px solid #bbb; width:100%; }
-    button { background:#6a5acd; color:#fff; border:none; border-radius:7px; padding:12px; width:100%; font-size:17px; }
-    .multi-select { height:70px; }
+    body { font-family: Arial; padding: 20px; }
+    input, select { padding: 8px; margin: 8px 0; border-radius: 6px; border: 1px solid #bbb; width: 100%; }
+    button { background: #6a5acd; color: #fff; border: none; padding: 12px; width: 100%; border-radius: 8px; font-size: 16px; }
+    .multi-select { height: 80px; }
   </style>
 </head>
 <body>
   <form id="searchForm">
     <h3>Поиск по фильтрам</h3>
+
     <label>Сфера:</label>
     <select id="sphere">
       <option value="">Любая</option>
       <option value="IT">IT</option>
+      <option value="Финансы">Финансы</option>
+      <option value="Наука">Наука</option>
       <option value="Маркетинг">Маркетинг</option>
-      <option value="Другое">Другое</option>
     </select>
+
     <label>Интересы:</label>
-    <select id="interests" multiple class="multi-select">
+    <select multiple class="multi-select" id="interests">
       <option value="Стартапы">Стартапы</option>
       <option value="Инвестиции">Инвестиции</option>
       <option value="Наука">Наука</option>
       <option value="Дизайн">Дизайн</option>
       <option value="Другое">Другое</option>
     </select>
+
     <label>Пол:</label>
     <select id="gender">
       <option value="">Любой</option>
       <option value="male">Мужской</option>
       <option value="female">Женский</option>
     </select>
+
     <label>Возраст (от - до):</label>
-    <div style="display:flex;gap:8px;">
-      <input type="number" id="age_from" min="18" max="99" placeholder="от" style="width:60px;">
-      <input type="number" id="age_to" min="18" max="99" placeholder="до" style="width:60px;">
+    <div style="display:flex;gap:10px;">
+      <input type="number" id="age_from" placeholder="от" style="width: 70px;" min="18" />
+      <input type="number" id="age_to" placeholder="до" style="width: 70px;" max="100" />
     </div>
+
     <button type="submit">Найти</button>
   </form>
+
   <script>
-    document.getElementById('searchForm').addEventListener('submit', function(e) {
+    document.getElementById('searchForm').addEventListener('submit', function (e) {
       e.preventDefault();
-      const obj = {
+
+      const data = {
+        action: "search", // 👈 отличаем от регистрации
         sphere: document.getElementById('sphere').value,
-        interests: Array.from(document.getElementById('interests').selectedOptions).map(o=>o.value),
+        interests: Array.from(document.getElementById('interests').selectedOptions).map(o => o.value),
         gender: document.getElementById('gender').value,
         age_from: document.getElementById('age_from').value,
-        age_to: document.getElementById('age_to').value
+        age_to: document.getElementById('age_to').value,
       };
-      Telegram.WebApp.sendData(JSON.stringify(obj));
+
+      Telegram.WebApp.sendData(JSON.stringify(data));
     });
   </script>
 </body>
