--- a/search.html
+++ b/search.html
@@ -50,26 +50,11 @@
 
     <label>Интересы:</label>
     <select multiple class="multi-select" id="interests">
-        <button type="button" class="tag-btn" data-value="Стартапы">Стартапы</button>
-        <button type="button" class="tag-btn" data-value="Инвестиции">Инвестиции</button>
-        <button type="button" class="tag-btn" data-value="Разработка">Разработка</button>
-        <button type="button" class="tag-btn" data-value="Маркетинг">Маркетинг</button>
-        <button type="button" class="tag-btn" data-value="Нетворкинг">Нетворкинг</button>
-        <button type="button" class="tag-btn" data-value="Наука">Наука</button>
-        <button type="button" class="tag-btn" data-value="Искусство">Искусство</button>
-        <button type="button" class="tag-btn" data-value="Финансы">Финансы</button>
-        <button type="button" class="tag-btn" data-value="Лидерство">Лидерство</button>
-        <button type="button" class="tag-btn" data-value="Дизайн">Дизайн</button>
-        <button type="button" class="tag-btn" data-value="Медиа">Медиа</button>
-        <button type="button" class="tag-btn" data-value="Образование">Образование</button>
-        <button type="button" class="tag-btn" data-value="Менеджмент">Менеджмент</button>
-        <button type="button" class="tag-btn" data-value="HR">HR</button>
-        <button type="button" class="tag-btn" data-value="Путешествия">Путешествия</button>
-        <button type="button" class="tag-btn" data-value="Фитнес">Фитнес</button>
-        <button type="button" class="tag-btn" data-value="Спорт">Спорт</button>
-        <button type="button" class="tag-btn" data-value="Экология">Экология</button>
-        <button type="button" class="tag-btn" data-value="Креатив">Креатив</button>
-        <button type="button" class="tag-btn" data-value="Другое">Другое</button>
+      <option value="Стартапы">Стартапы</option>
+      <option value="Инвестиции">Инвестиции</option>
+      <option value="Наука">Наука</option>
+      <option value="Дизайн">Дизайн</option>
+      <option value="Другое">Другое</option>
     </select>
 
     <label>Пол:</label>
