--- a/search.html
+++ b/search.html
@@ -88,10 +88,28 @@
         <option value="Финансы">Финансы</option>
         <option value="Маркетинг">Маркетинг</option>
         <option value="Образование">Образование</option>
+        <option value="Продажи">Продажи</option>
         <option value="Юриспруденция">Юриспруденция</option>
+        <option value="Медицина">Медицина и здравоохранение</option>
         <option value="Дизайн">Дизайн</option>
-        <option value="Медиа">Медиа</option>
-        <option value="Наука">Наука</option>
+        <option value="Медиа">Медиа/Журналистика</option>
+        <option value="Наука">Наука/Исследования</option>
+        <option value="Инженерия">Инженерия/Производство</option>
+        <option value="Строительство">Строительство</option>
+        <option value="Логистика">Логистика/Транспорт</option>
+        <option value="HoReCa">HoReCa, туризм, гостиницы</option>
+        <option value="Ритейл">Торговля/Ритейл</option>
+        <option value="HR">Управление персоналом/HR</option>
+        <option value="Администрация">Администрирование</option>
+        <option value="Госслужба">Госслужба/НКО</option>
+        <option value="Аналитика">Аналитика/Консалтинг</option>
+        <option value="Безопасность">Безопасность/Охрана</option>
+        <option value="Культура">Искусство/Культура</option>
+        <option value="Спорт">Спорт/Фитнес</option>
+        <option value="Инфраструктура">Энергетика/Инфраструктура</option>
+        <option value="Агро">Сельское хозяйство</option>
+        <option value="Экология">Экология/Устойчивое развитие</option>
+        <option value="Блогинг">Блогинг/SMM</option>
         <option value="Другое">Другое</option>
       </select>
 
@@ -99,14 +117,23 @@
       <select multiple class="multi-select" id="interests">
         <option value="Стартапы">Стартапы</option>
         <option value="Инвестиции">Инвестиции</option>
-        <option value="Наука">Наука</option>
-        <option value="Дизайн">Дизайн</option>
+        <option value="Разработка">Разработка</option>
         <option value="Маркетинг">Маркетинг</option>
+        <option value="Нетворкинг">Нетворкинг</option>
+        <option value="Наука">Наука</option>
+        <option value="Искусство">Искусство</option>
+        <option value="Финансы">Финансы</option>
+        <option value="Лидерство">Лидерство</option>
+        <option value="Дизайн">Дизайн</option>
+        <option value="Медиа">Медиа</option>
+        <option value="Образование">Образование</option>
+        <option value="Менеджмент">Менеджмент</option>
+        <option value="HR">HR</option>
         <option value="Путешествия">Путешествия</option>
+        <option value="Фитнес">Фитнес</option>
+        <option value="Спорт">Спорт</option>
         <option value="Экология">Экология</option>
         <option value="Креатив">Креатив</option>
-        <option value="Разработка">Разработка</option>
-        <option value="Нетворкинг">Нетворкинг</option>
         <option value="Другое">Другое</option>
       </select>
 
