--- a/search.html
+++ b/search.html
@@ -13,24 +13,21 @@
       background-color: var(--tg-theme-bg-color, #f0f4ff);
       color: var(--tg-theme-text-color, #000);
     }
-
     .container {
       max-width: 100%;
       margin: 0 auto;
+      padding: 20px;
       box-sizing: border-box;
     }
-
     h2 {
-      margin-bottom: 12px;
+      margin-bottom: 18px;
       color: var(--tg-theme-text-color, #000);
     }
-
     label {
       display: block;
       margin: 12px 0 4px 0;
       font-weight: bold;
     }
-
     input, select {
       width: 100%;
       padding: 12px;
@@ -38,13 +35,9 @@
       border: 1px solid #ccc;
       font-size: 16px;
       box-sizing: border-box;
+      margin-bottom: 10px;
     }
-
-    .multi-select {
-      height: 110px;
-    }
-
-    .btn {
+    button {
       background-color: var(--tg-theme-button-color, #6a5acd);
       color: var(--tg-theme-button-text-color, #fff);
       border: none;
@@ -52,23 +45,43 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
-      margin: 20px 0 10px 0;
+      margin: 12px 0;
       width: 100%;
     }
-
-    .btn:hover {
-      background-color: #5a4abc;
+    .nav-buttons {
+      display: flex;
+      gap: 10px;
     }
-
+    .tags-group {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      margin: 12px 0;
+    }
+    .tag-btn {
+      padding: 9px 18px;
+      border-radius: 20px;
+      border: 1.5px solid #6a5acd;
+      background: #edeaff;
+      color: #4a4a8e;
+      cursor: pointer;
+      font-size: 15px;
+      transition: background .18s, color .18s, border-color .18s;
+      outline: none;
+      margin: 2px 0;
+    }
+    .tag-btn.selected {
+      background: #6a5acd;
+      color: #fff;
+      border-color: #483d8b;
+    }
     .flex {
       display: flex;
       gap: 8px;
     }
-
     .flex input {
       width: 100%;
     }
-
     .note {
       font-size: 14px;
       color: #666;
@@ -79,8 +92,8 @@
 <body>
   <div class="container">
     <h2>Поиск по фильтрам</h2>
-
     <form id="searchForm">
+
       <label>Сфера деятельности</label>
       <select id="sphere">
         <option value="">Любая</option>
@@ -114,66 +127,78 @@
       </select>
 
       <label>Интересы</label>
-      <select multiple class="multi-select" id="interests">
-        <option value="Стартапы">Стартапы</option>
-        <option value="Инвестиции">Инвестиции</option>
-        <option value="Разработка">Разработка</option>
-        <option value="Маркетинг">Маркетинг</option>
-        <option value="Нетворкинг">Нетворкинг</option>
-        <option value="Наука">Наука</option>
-        <option value="Искусство">Искусство</option>
-        <option value="Финансы">Финансы</option>
-        <option value="Лидерство">Лидерство</option>
-        <option value="Дизайн">Дизайн</option>
-        <option value="Медиа">Медиа</option>
-        <option value="Образование">Образование</option>
-        <option value="Менеджмент">Менеджмент</option>
-        <option value="HR">HR</option>
-        <option value="Путешествия">Путешествия</option>
-        <option value="Фитнес">Фитнес</option>
-        <option value="Спорт">Спорт</option>
-        <option value="Экология">Экология</option>
-        <option value="Креатив">Креатив</option>
-        <option value="Другое">Другое</option>
-      </select>
+      <div class="tags-group" id="interestsGroup">
+        <button type="button" class="tag-btn" data-value="Стартапы">Стартапы</button>
+        <button type="button" class="tag-btn" data-value="Инвестиции">Инвестиции</button>
+        <button type="button" class="tag-btn" data-value="Разработка">Разработка</button>
+        <button type="button" class="tag-btn" data-value="Маркетинг">Маркетинг</button>
+        <button type="button" class="tag-btn" data-value="Нетворкинг">Нетворкинг</button>
+        <button type="button" class="tag-btn" data-value="Наука">Наука</button>
+        <button type="button" class="tag-btn" data-value="Искусство">Искусство</button>
+        <button type="button" class="tag-btn" data-value="Финансы">Финансы</button>
+        <button type="button" class="tag-btn" data-value="Лидерство">Лидерство</button>
+        <button type="button" class="tag-btn" data-value="Дизайн">Дизайн</button>
+        <button type="button" class="tag-btn" data-value="Медиа">Медиа</button>
+        <button type="button" class="tag-btn" data-value="Образование">Образование</button>
+        <button type="button" class="tag-btn" data-value="Менеджмент">Менеджмент</button>
+        <button type="button" class="tag-btn" data-value="HR">HR</button>
+        <button type="button" class="tag-btn" data-value="Путешествия">Путешествия</button>
+        <button type="button" class="tag-btn" data-value="Фитнес">Фитнес</button>
+        <button type="button" class="tag-btn" data-value="Спорт">Спорт</button>
+        <button type="button" class="tag-btn" data-value="Экология">Экология</button>
+        <button type="button" class="tag-btn" data-value="Креатив">Креатив</button>
+        <button type="button" class="tag-btn" data-value="Другое">Другое</button>
+      </div>
 
       <label>Пол</label>
       <select id="gender">
         <option value="">Любой</option>
         <option value="male">Мужской</option>
         <option value="female">Женский</option>
-        <option value="other">Не указывать</option>
+        <option value="other">Предпочитаю не указывать</option>
       </select>
 
       <label>Возраст (от - до)</label>
       <div class="flex">
-        <input type="number" id="age_from" placeholder="от" min="18" max="99" />
-        <input type="number" id="age_to" placeholder="до" min="18" max="99" />
+        <input type="number" id="age_from" min="18" max="99" placeholder="от" />
+        <input type="number" id="age_to" min="18" max="99" placeholder="до" />
       </div>
       <div class="note">Минимум 18 лет</div>
 
-      <button type="submit" class="btn">Найти</button>
+      <button type="submit">Найти</button>
     </form>
   </div>
 
   <script>
-    document.getElementById("searchForm").addEventListener("submit", function(e) {
-      e.preventDefault();
+    // Логика выбора интересов (множественный выбор через tag-кнопки)
+    function getSelectedInterests() {
+      return Array.from(document.querySelectorAll('.tag-btn.selected')).map(btn => btn.dataset.value);
+    }
 
-      const data = {
-        action: "search", // 👈 для бота
-        sphere: document.getElementById("sphere").value,
-        interests: Array.from(document.getElementById("interests").selectedOptions).map(opt => opt.value),
-        gender: document.getElementById("gender").value,
-        age_from: document.getElementById("age_from").value,
-        age_to: document.getElementById("age_to").value
-      };
+    document.addEventListener('DOMContentLoaded', () => {
+      document.querySelectorAll('.tag-btn').forEach(btn => {
+        btn.addEventListener('click', function() {
+          this.classList.toggle('selected');
+        });
+      });
 
-      if (Telegram && Telegram.WebApp) {
-        Telegram.WebApp.sendData(JSON.stringify(data));
-      } else {
-        alert("Ошибка: Telegram WebApp не инициализирован.");
-      }
+      document.getElementById("searchForm").addEventListener("submit", function(e) {
+        e.preventDefault();
+        const data = {
+          action: "search",
+          sphere: document.getElementById("sphere").value,
+          interests: getSelectedInterests(),
+          gender: document.getElementById("gender").value,
+          age_from: document.getElementById("age_from").value,
+          age_to: document.getElementById("age_to").value
+        };
+
+        if (Telegram && Telegram.WebApp) {
+          Telegram.WebApp.sendData(JSON.stringify(data));
+        } else {
+          alert("Ошибка: Telegram WebApp не инициализирован.");
+        }
+      });
     });
   </script>
 </body>
